--- a/site/index.html
+++ b/site/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Document title</title>
-    <link href="style/base.css" rel="stylesheet" />
+    <!-- >>> Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <!-- <<< Google fonts -->
     <script src="src/index.js"></script>
+    <link href="style/base.css" rel="stylesheet" />
   </head>
   <body>
   </body>
