--- a/site/index.html
+++ b/site/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Document title</title>
-    <!-- >>> Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
-    <!-- <<< Google fonts -->
-    <script src="src/index.js"></script>
-    <link href="style/base.css" rel="stylesheet" />
-  </head>
-  <body>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Document title</title>
+  <!-- >>> Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+  <!-- <<< Google fonts -->
+  <script src="src/index.js"></script>
+  <link href="style/base.css" rel="stylesheet" />
+</head>
+<body id="uni_layout" class="uni_text">
+  <div id="uni_center_column">
+    <input id="uni_codepoint_search_box" class="uni_text">
+  </div>
+</body>
 </html>
