--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <title>Document title</title>
   <!-- >>> Google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
   <!-- <<< Google fonts -->
   <script src="src/index.js"></script>
   <link href="style/base.css" rel="stylesheet" />
