--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body id="uni_layout" class="uni_text">
-  <div id="uni_title_bar"><div id="uni_marker">U+</div>Unicode search</div>
+  <div id="uni_title_bar"><div id="uni_marker">U+&#x2764;</div>Unicode {dev} search</div>
   <div id="uni_center_column">
     <div id="uni_search_container">
       <div id="upper_label">Search for a codepoint or name</div>
